--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -95,48 +95,51 @@ nla_dat <- mutate(nla_dat,log_chla = log10(CHLA),log_micro = log10(MCYST_TL_UGL)
 # Condtional Probability
 ################################################################################
 mc_guides <- c(0.3, 1, 1.6, 2, 4, 10, 20)
-mc_names <- c("EPA_Child","WHO","EPA_Adult","WHO","WHO","WHO","WHO")
+mc_names <- c("U.S. EPA","WHO","U.S. EPA","WHO","WHO","WHO","WHO")
+mc_type <- c("Drinking","Drinking","Drinking","Recreational","Recreational","Recreational","Recreational")
 mc_chla <- vector("numeric",length(mc_guides))
+wgt <- nla_dat$WGT_NLA
+#wgt<- rep(1,nrow(nla_dat))
 
 epa_child_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
                      xImpair = log10(mc_guides[1]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100)
+                     ci = TRUE, R = 100, xW=wgt)
 
 mc_chla[1] <- get_chla(epa_child_cp,0.5)
 
 who_drink_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
                      xImpair = log10(mc_guides[2]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100)
+                     ci = TRUE, R = 100, xW=wgt)
 
 mc_chla[2] <- get_chla(who_drink_cp,0.5)
 
 epa_adult_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
                      xImpair = log10(mc_guides[3]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100)
+                     ci = TRUE, R = 100, xW=wgt)
 
 mc_chla[3] <- get_chla(epa_adult_cp,0.5)
 
 who_rec_low1_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
                      xImpair = log10(mc_guides[4]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100)
+                     ci = TRUE, R = 100, xW=wgt)
 
 mc_chla[4] <- get_chla(who_rec_low1_cp,0.5)
 
 who_rec_low2_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
                      xImpair = log10(mc_guides[5]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100)
+                     ci = TRUE, R = 100, xW=wgt)
 
 mc_chla[5] <- get_chla(who_rec_low2_cp,0.5)
 
 who_rec_med1_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
                      xImpair = log10(mc_guides[6]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100)
+                     ci = TRUE, R = 100, xW=wgt)
 
 mc_chla[6] <- get_chla(who_rec_med1_cp,0.5)
 
 who_rec_med2_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
                      xImpair = log10(mc_guides[7]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100)
+                     ci = TRUE, R = 100, xW=wgt)
 
 mc_chla[7] <- get_chla(who_rec_med2_cp,0.5)
 ```
@@ -158,11 +161,55 @@ In the summer of 2014, the city of Toledo, OH was forced to shut down their muni
 
 One of these complications is that they rely on available measurements of microcystin-LR.  This toxin can be measured in the field using test strips but these are a coarse measure at best and currently available test strips focus on 1 and 10 $\mu$g/L [REFS].  Measurements with greater accuracy and precision require taking water samples and processing those in a lab to determine the toxin concentration [REFS].  Additionally, microcystin-LR is, currently, not a routinely collected water quality parameter,thus, availability of microcystin-LR data may limit our ability to screen water bodies for exceedances of the various health advisories concentrations.  Until microcystin-LR concentrations are more widely collected an alternative measure is needed. Fortunately, microcystin-LR has been shown to be associated with several other, more easily measured components of water quality.
 
-Chlorophyll *a* is a very commonly measured components of water quality that is also known to be associated with Microsystin-LR concentrations [REFS].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that provide reliable measurements [REFS].   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  Thus, the goal of this paper is to utlize the National Lakes Assessment data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [NLA REF].  So that others may repeat this analysis, the data, code, and this manuscript are freely available via [https://github.com/USAPE/microcystinchla](https://github.com/USAPE/microcystinchla).
+Chlorophyll *a* is a very commonly measured components of water quality that is also known to be associated with Microsystin-LR concentrations [REFS].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that provide reliable measurements [REFS].   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  Thus, the goal of this paper is to utlize the National Lakes Assessment data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [NLA REF].  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USAPE/microcystinchla](https://github.com/USAPE/microcystinchla).
 
 #Methods
+We evaluated associated chlorophyll *a* concentrations for an effect for each of the WHO and U.S. EPA levels (Table \ref{tab:microcystin_levels}). Lakes with higher microcystin-LR concentrations were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)` % of lakes sampled had a concentration greater than 10.  For this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 $\mu$g/L.
 
-```{r microcystin_levels,echo=FALSE,results='asis'}
+#Results
+
+(Table \ref{tab:mc_chla_table})
+
+(Figure \ref{fig:epa_child_cp_plot})
+
+(Figure \ref{fig:who_drink_cp_plot})
+
+(Figure \ref{fig:epa_adult_cp})
+
+(Figure \ref{fig:who_rec_low1_cp})
+
+
+#Discussion
+
+#Figures
+
+```{r epa_child_cp_plot,echo=FALSE, fig.cap="Plot of \\label{fig:epa_child_cp_plot}"}
+plot_cp(epa_child_cp,x = "Log 10 Chlorophyll", y = "Probability of Exceeding EPA Child HA")
+```
+
+\newpage
+
+```{r who_drink_cp_plot,echo=FALSE, fig.cap="Plot of  \\label{fig:who_drink_cp_plot}"}
+plot_cp(who_drink_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding WHO Drinking HA")
+```
+
+\newpage
+
+```{r epa_adult_cp ,echo=FALSE, fig.cap="Plot of  \\label{fig:epa_adult_cp}"}
+plot_cp(epa_adult_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding EPA Adult HA")
+```
+
+\newpage
+
+```{r who_rec_low1_cp, echo=FALSE, fig.cap="Plot of  \\label{fig:who_rec_low1_cp}"}
+plot_cp(who_rec_low1_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding WHO Low Probability HA")
+```
+
+\newpage
+
+#Tables
+
+```{r microcystin_levels,echo=FALSE,results='asis', fig.cap="Various suggested microcystin-LR health advisory concentrations. \\label{fig:microcystin_levels}"}
 source_of_stnd <- c("WHO",
                     "WHO",
                     "WHO",
@@ -197,41 +244,11 @@ names(mc_conc_table)<-c("Source","Type","Concentration")
 pandoc.table(mc_conc_table,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
 ```
 
-We evaluated associated chlorophyll *a* concentrations for an effect for each of the WHO and EPA levels. Lakes with higher microcystin-LR concentrations were rare. Only `r 100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat))` % of lakes sampled had a concentration greater than 10.  For this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 $\mu$g/L.
+\newpage
 
-#Results
-
-```{r mc_chla_table, results='asis', echo=FALSE}
-mc_chla_tbl <- data.frame(Source=mc_names,Microcystin=mc_guides,Chlorophyll=mc_chla)[1:4,]
+```{r mc_chla_table, results='asis', echo=FALSE, fig.cap="Chlorophyll \textit{a} concentrations that are associated with a 50% probability of exceeding a microcystin-LR health advisory concentration. \\label{fig:mc_chla_table}"}
+mc_chla_tbl <- data.frame(Source=mc_names,Type=mc_type,Microcystin=mc_guides,Chlorophyll=mc_chla)[1:4,]
 pandoc.table(mc_chla_tbl,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
 ```
-
-#Discussion
-
-#Figures
-
-```{r epa_child_cp_plot,echo=FALSE}
-plot_cp(epa_child_cp,x = "Log 10 Chlorophyll", y = "Probability of Exceeding EPA Child HA")
-```
-
-\newpage
-
-```{r who_drink_cp_plot,echo=FALSE}
-plot_cp(who_drink_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding WHO Drinking HA")
-```
-
-\newpage
-
-```{r epa_adult_cp ,echo=FALSE}
-plot_cp(epa_adult_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding EPA Adult HA")
-```
-
-\newpage
-
-```{r who_rec_low1_cp, echo=FALSE}
-plot_cp(who_rec_low1_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding WHO Low Probability HA")
-```
-
-\newpage
 
 #References
