--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -125,23 +125,23 @@ who_rec_low1_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro,
 
 mc_chla[4] <- get_chla(who_rec_low1_cp,0.5)
 
-who_rec_low2_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
-                     xImpair = log10(mc_guides[5]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100, xW=wgt)
+#who_rec_low2_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
+#                     xImpair = log10(mc_guides[5]), ProbComp = "gt", Exceed = "gte",
+#                     ci = TRUE, R = 100, xW=wgt)
 
-mc_chla[5] <- get_chla(who_rec_low2_cp,0.5)
+#mc_chla[5] <- get_chla(who_rec_low2_cp,0.5)
 
-who_rec_med1_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
-                     xImpair = log10(mc_guides[6]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100, xW=wgt)
+#who_rec_med1_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
+#                     xImpair = log10(mc_guides[6]), ProbComp = "gt", Exceed = "gte",
+#                     ci = TRUE, R = 100, xW=wgt)
 
-mc_chla[6] <- get_chla(who_rec_med1_cp,0.5)
+#mc_chla[6] <- get_chla(who_rec_med1_cp,0.5)
 
-who_rec_med2_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
-                     xImpair = log10(mc_guides[7]), ProbComp = "gt", Exceed = "gte",
-                     ci = TRUE, R = 100, xW=wgt)
+#who_rec_med2_cp <- condprob(xX = nla_dat$log_chla,xY = nla_dat$log_micro, 
+#                     xImpair = log10(mc_guides[7]), ProbComp = "gt", Exceed = "gte",
+#                     ci = TRUE, R = 100, xW=wgt)
 
-mc_chla[7] <- get_chla(who_rec_med2_cp,0.5)
+#mc_chla[7] <- get_chla(who_rec_med2_cp,0.5)
 ```
 
 
@@ -164,45 +164,56 @@ One of these complications is that they rely on available measurements of microc
 Chlorophyll *a* is a very commonly measured components of water quality that is also known to be associated with Microsystin-LR concentrations [REFS].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that provide reliable measurements [REFS].   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  Thus, the goal of this paper is to utlize the National Lakes Assessment data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [NLA REF].  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USAPE/microcystinchla](https://github.com/USAPE/microcystinchla).
 
 #Methods
-We evaluated associated chlorophyll *a* concentrations for an effect for each of the WHO and U.S. EPA levels (Table \ref{tab:microcystin_levels}). Lakes with higher microcystin-LR concentrations were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)` % of lakes sampled had a concentration greater than 10.  For this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 $\mu$g/L.
+
+##Data
+
+##Conditional Probability Analysis
+We used a conditional probability analysis approach to explore associations between chlorophyll *a* concentrations  and World Health Organization (WHO) and U.S. Environmental Protection Agency (U.S. EPA) microcystin-LR health advisory levels [REFS].  Many levels have been suggested [Table \ref{tab:microcystin_levels}], but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)` % of lakes sampled had a concentration greater than 10.  Thus, for this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 $\mu$g/L.
+
+
 
 #Results
 
 (Table \ref{tab:mc_chla_table})
 
-(Figure \ref{fig:epa_child_cp_plot})
+(Figure \ref{fig:chla_micro_scatter})
 
-(Figure \ref{fig:who_drink_cp_plot})
+(Figure \ref{fig:chla_micro_cdf})
 
-(Figure \ref{fig:epa_adult_cp})
-
-(Figure \ref{fig:who_rec_low1_cp})
-
+(Figure \ref{fig:multi_cp_plot})
 
 #Discussion
 
 #Figures
 
-```{r epa_child_cp_plot,echo=FALSE, fig.cap="Plot of \\label{fig:epa_child_cp_plot}"}
-plot_cp(epa_child_cp,x = "Log 10 Chlorophyll", y = "Probability of Exceeding EPA Child HA")
+```{r chla_micro_scatter, echo=FALSE, fig.width=8, fig.cap="Scatterplot showing association betweeen chlorophyll \\it{a} and microcystin-LR. \\label{fig:chla_micro_scatter}"}
+plot_scatter(nla_dat,CHLA,MCYST_TL_UGL,viridis(1))
 ```
 
 \newpage
 
-```{r who_drink_cp_plot,echo=FALSE, fig.cap="Plot of  \\label{fig:who_drink_cp_plot}"}
-plot_cp(who_drink_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding WHO Drinking HA")
+```{r chla_micro_cdf, echo=FALSE, fig.width=8, fig.cap="Conditional probability plots showing association between the probability of exceeding various microcystin-LR (MLR) health advisory Levels. \\label{fig:chla_micro_cdf}"}
+plot_cdf()
 ```
 
 \newpage
 
-```{r epa_adult_cp ,echo=FALSE, fig.cap="Plot of  \\label{fig:epa_adult_cp}"}
-plot_cp(epa_adult_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding EPA Adult HA")
-```
-
-\newpage
-
-```{r who_rec_low1_cp, echo=FALSE, fig.cap="Plot of  \\label{fig:who_rec_low1_cp}"}
-plot_cp(who_rec_low1_cp, x = "Log 10 Chlorophyll", y = "Probability of Exceeding WHO Low Probability HA")
+```{r epa_child_cp_plot, echo=FALSE, fig.width=8, fig.cap="Conditional probability plots showing association between the probability of exceeding various microcystin-LR (MLR) health advisory Levels. \\label{fig:multi_cp_plot}"}
+multiplot(
+  plot_cp(epa_child_cp,x = "Log 10 Chlorophyll", 
+          y = "Probability of Exceeding 0.3 ug/L MLR",
+          title="U.S. EPA Children's Drinking Water Advisory Level"),
+  plot_cp(who_drink_cp, x = "Log 10 Chlorophyll", 
+          y = "Probability of Exceeding 1 ug/L MLR", 
+          title="WHO Drinking Water Advisory Level"),
+  plot_cp(epa_adult_cp, x = "Log 10 Chlorophyll", 
+          y = "Probability of Exceeding 1.6 ug/L MLR", 
+          title="U.S. EPA Adult Drinking Water Advisory Level"),
+  plot_cp(who_rec_low1_cp, x = "Log 10 Chlorophyll", 
+          y = "Probability of Exceeding 2 ug/L MLR", 
+          title="WHO Recreational Water Advisory Level"),
+  cols=2
+)
 ```
 
 \newpage
@@ -224,13 +235,13 @@ type_of_stnd <- c("Recreational",
                   "Drinking",
                   "Drinking",
                   "Drinking")
-concentration <- c("2-4 ug/l",
-                   "10-20 ug/l",
-                   "20-2000 ug/l",
-                   ">2000 ug/l",
-                   "1 ug/l",
-                   "0.3 ug/l",
-                   "1.6 ug/l")
+concentration <- c("2-4 $\\mu$g/L",
+                   "10-20 $\\mu$g/L",
+                   "20-2000 $\\mu$g/L",
+                   ">2000 $\\mu$g/L",
+                   "1 $\\mu$g/L",
+                   "0.3 $\\mu$g/L",
+                   "1.6 $\\mu$g/L")
 #note <- c("Low probability of adverse health effects",
 #          "Moderate probability of adverse health effects",
 #          "High probability of adverse health effects, These higher #concentrations typically only seen in visible scums/algal mats",
