--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -191,7 +191,7 @@ microcystin health advisory level. We look at the recent US EPA
 standards for drinking water as well as the World Health Organization
 levels for drinking water and recreational use. For microcystin
 concentrations of 0.3, 1, 1.6, and 2 we find chlorophyll \emph{a}
-concentrations of 20.8, 71.2, 92.16, and 110.16, respectively. When
+concentrations of 20.8, 78.29, 109.66, and 109.66, respectively. When
 managing for these various microcystin levels exceeding these reported
 chlorophyll \emph{a} concentrations should be a trigger for further
 testing and possible management action.
@@ -249,25 +249,30 @@ code, and this manuscript are freely available via
 
 \section{Methods}\label{methods}
 
-We evaluated associated chlorophyll \emph{a} concentrations for an
-effect for each of the WHO and U.S. EPA levels (Table
-\ref{tab:microcystin_levels}). Lakes with higher microcystin-LR
-concentrations were rare. Only 1.16 \% of lakes sampled had a
-concentration greater than 10. For this analysis we focus on the
-microcystin concentrations that are better represented in the NLA data.
-These were 0.3, 1, 1.6, and 2 \(\mu\)g/L.
+\subsection{Data}\label{data}
+
+\subsection{Conditional Probability
+Analysis}\label{conditional-probability-analysis}
+
+We used a conditional probability analysis approach to explore
+associations between chlorophyll \emph{a} concentrations and World
+Health Organization (WHO) and U.S. Environmental Protection Agency (U.S.
+EPA) microcystin-LR health advisory levels {[}REFS{]}. Many levels have
+been suggested {[}Table \ref{tab:microcystin_levels}{]}, but lakes with
+higher microcystin-LR concentrations in the NLA were rare. Only 1.16 \%
+of lakes sampled had a concentration greater than 10. Thus, for this
+analysis we focus on the microcystin concentrations that are better
+represented in the NLA data. These were 0.3, 1, 1.6, and 2 \(\mu\)g/L.
 
 \section{Results}\label{results}
 
 (Table \ref{tab:mc_chla_table})
 
-(Figure \ref{fig:epa_child_cp_plot})
+(Figure \ref{fig:chla_micro_scatter})
 
-(Figure \ref{fig:who_drink_cp_plot})
+(Figure \ref{fig:chla_micro_cdf})
 
-(Figure \ref{fig:epa_adult_cp})
-
-(Figure \ref{fig:who_rec_low1_cp})
+(Figure \ref{fig:multi_cp_plot})
 
 \section{Discussion}\label{discussion}
 
@@ -275,32 +280,37 @@ These were 0.3, 1, 1.6, and 2 \(\mu\)g/L.
 
 \begin{figure}[htbp]
 \centering
+\includegraphics{manuscript_files/figure-latex/chla_micro_scatter-1.pdf}
+\caption{Scatterplot showing association betweeen chlorophyll
+\it{a} and microcystin-LR. \label{fig:chla_micro_scatter}}
+\end{figure}
+
+\newpage
+
+\begin{verbatim}
+## No id variables; using all as measure variables
+\end{verbatim}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{manuscript_files/figure-latex/chla_micro_cdf-1.pdf}
+\caption{Conditional probability plots showing association between the
+probability of exceeding various microcystin-LR (MLR) health advisory
+Levels. \label{fig:chla_micro_cdf}}
+\end{figure}
+
+\newpage
+
+\begin{verbatim}
+## Loading required package: grid
+\end{verbatim}
+
+\begin{figure}[htbp]
+\centering
 \includegraphics{manuscript_files/figure-latex/epa_child_cp_plot-1.pdf}
-\caption{Plot of \label{fig:epa_child_cp_plot}}
-\end{figure}
-
-\newpage
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/who_drink_cp_plot-1.pdf}
-\caption{Plot of \label{fig:who_drink_cp_plot}}
-\end{figure}
-
-\newpage
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/epa_adult_cp -1.pdf}
-\caption{Plot of \label{fig:epa_adult_cp}}
-\end{figure}
-
-\newpage
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/who_rec_low1_cp-1.pdf}
-\caption{Plot of \label{fig:who_rec_low1_cp}}
+\caption{Conditional probability plots showing association between the
+probability of exceeding various microcystin-LR (MLR) health advisory
+Levels. \label{fig:multi_cp_plot}}
 \end{figure}
 
 \newpage
@@ -315,7 +325,7 @@ Source
 \begin{minipage}[b]{0.16\columnwidth}\raggedright\strut
 Type
 \strut\end{minipage} &
-\begin{minipage}[b]{0.19\columnwidth}\raggedright\strut
+\begin{minipage}[b]{0.20\columnwidth}\raggedright\strut
 Concentration
 \strut\end{minipage}\tabularnewline
 \midrule
@@ -326,8 +336,8 @@ WHO
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Drinking
 \strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-1 ug/l
+\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
+1 \(\mu\)g/L
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 U.S. EPA
@@ -335,8 +345,8 @@ U.S. EPA
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Drinking
 \strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-0.3 ug/l
+\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
+0.3 \(\mu\)g/L
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 U.S. EPA
@@ -344,8 +354,8 @@ U.S. EPA
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Drinking
 \strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-1.6 ug/l
+\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
+1.6 \(\mu\)g/L
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 WHO
@@ -353,8 +363,8 @@ WHO
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Recreational
 \strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-2-4 ug/l
+\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
+2-4 \(\mu\)g/L
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 WHO
@@ -362,8 +372,8 @@ WHO
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Recreational
 \strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-10-20 ug/l
+\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
+10-20 \(\mu\)g/L
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 WHO
@@ -371,8 +381,8 @@ WHO
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Recreational
 \strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-20-2000 ug/l
+\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
+20-2000 \(\mu\)g/L
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 WHO
@@ -380,8 +390,8 @@ WHO
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Recreational
 \strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-\textgreater{}2000 ug/l
+\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
+\textgreater{}2000 \(\mu\)g/L
 \strut\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
@@ -436,7 +446,7 @@ Drinking
 1
 \strut\end{minipage} &
 \begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-71.2
+78.29
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 U.S. EPA
@@ -448,7 +458,7 @@ Drinking
 1.6
 \strut\end{minipage} &
 \begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-92.16
+109.7
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 WHO
@@ -460,7 +470,7 @@ Recreational
 2
 \strut\end{minipage} &
 \begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-110.2
+109.7
 \strut\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
