--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -166,11 +166,12 @@ Chlorophyll *a* is a very commonly measured components of water quality that is 
 #Methods
 
 ##Data
+We used the 2007 National Lakes Assessment (NLA) water quality and microcystin-LR concentration data [REF].  The NLA is a probability based design that, when using the provided sample weights, can be used to provide unbiased estimates of lake condition for all lakes in the original sample frame (e.g. lakes greater than 4ha in the conterminous US).  These data represent a snapshot of water quality from the summer of 2007 and data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(nla_dat$CHLA,nla_dat$MCYST_TL_UGL))` lakes.  All results are reported using weighted estimates.    
 
 ##Conditional Probability Analysis
-We used a conditional probability analysis approach to explore associations between chlorophyll *a* concentrations  and World Health Organization (WHO) and U.S. Environmental Protection Agency (U.S. EPA) microcystin-LR health advisory levels [REFS].  Many levels have been suggested [Table \ref{tab:microcystin_levels}], but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)` % of lakes sampled had a concentration greater than 10.  Thus, for this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 $\mu$g/L.
+We used a conditional probability analysis (CPA) approach to explore associations between chlorophyll *a* concentrations  and World Health Organization (WHO) and U.S. Environmental Protection Agency (U.S. EPA) microcystin-LR health advisory levels [REFS].  Many levels have been suggested [Table \ref{tab:microcystin_levels}], but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)` % of lakes sampled had a concentration greater than 10.  Thus, for this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 $\mu$g/L.
 
-
+A detailed discussion of CPA is beyond the scope of this paper, but see Paul et al. [-REF] and Hollister et al. [-REF] for details.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisory changes as chlorophyll *a* increases in a lake.  The 95% confidence intervals were calculated from 1000 bootstrapped samples. To identify chlorophyll *a* concentrations of concern we used a 50% conditional probability of exceeding each health advisory level and extracted the minimum chlorophyll *a* concentration that was associated with the upper confidence level being 50% or greater.  Details of the specific implementation we used are available at https://github.com/USEPA/microcystinchla.
 
 #Results
 
@@ -222,7 +223,7 @@ multiplot(
 
 #Tables
 
-```{r microcystin_levels,echo=FALSE,results='asis', fig.cap="Various suggested microcystin-LR health advisory concentrations. \\label{fig:microcystin_levels}"}
+```{r microcystin_levels,echo=FALSE,results='asis', fig.cap="Various suggested microcystin-LR health advisory concentrations. \\label{tab:microcystin_levels}"}
 source_of_stnd <- c("WHO",
                     "WHO",
                     "WHO",
@@ -259,7 +260,7 @@ pandoc.table(mc_conc_table,justify = "left" ,split.table = 120, split.cells  = c
 
 \newpage
 
-```{r mc_chla_table, results='asis', echo=FALSE, fig.cap="Chlorophyll \textit{a} concentrations that are associated with a 50% probability of exceeding a microcystin-LR health advisory concentration. \\label{fig:mc_chla_table}"}
+```{r mc_chla_table, results='asis', echo=FALSE, fig.cap="Chlorophyll \textit{a} concentrations that are associated with a 50% probability of exceeding a microcystin-LR health advisory concentration. \\label{tab:mc_chla_table}"}
 mc_chla_tbl <- data.frame(Source=mc_names,Type=mc_type,Microcystin=mc_guides,Chlorophyll=mc_chla)[1:4,]
 pandoc.table(mc_chla_tbl,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
 ```
